[gd_scene load_steps=35 format=3 uid="uid://ckubjbp3e7yy3"]

[ext_resource type="Script" uid="uid://ctp441gxhvg80" path="res://addons/parley/main_panel.gd" id="1_06n3w"]
[ext_resource type="Texture2D" uid="uid://ct6iywe1qjuh3" path="res://addons/parley/assets/New.svg" id="3_4ui00"]
[ext_resource type="Texture2D" uid="uid://bmyblj8lm0jme" path="res://addons/parley/assets/Save.svg" id="3_qx68p"]
[ext_resource type="Texture2D" uid="uid://cs83fq73m01l3" path="res://addons/parley/assets/Dialogue.svg" id="4_f842u"]
[ext_resource type="Texture2D" uid="uid://per2rlewtjxg" path="res://addons/parley/assets/ArrangeNodes.svg" id="4_idh4w"]
[ext_resource type="Texture2D" uid="uid://baq4do7xr0saf" path="res://addons/parley/assets/Load.svg" id="4_rvlcv"]
[ext_resource type="Script" uid="uid://dhlbgj5hd2115" path="res://addons/parley/models/fact.gd" id="4_xjep8"]
[ext_resource type="Texture2D" uid="uid://b2wgt8tna8evo" path="res://addons/parley/assets/DialogueOption.svg" id="5_8bgxb"]
[ext_resource type="Texture2D" uid="uid://c2a7qe81k3qlg" path="res://addons/parley/assets/TestDialogue.svg" id="5_u6vvd"]
[ext_resource type="Texture2D" uid="uid://cwpe018tuojmx" path="res://addons/parley/assets/Condition.svg" id="6_pb8ro"]
[ext_resource type="Texture2D" uid="uid://batwytcx6oxfd" path="res://addons/parley/assets/Action.svg" id="7_lxbr4"]
[ext_resource type="Texture2D" uid="uid://b1waalrtryrol" path="res://addons/parley/assets/Start.svg" id="8_2fjw0"]
[ext_resource type="Script" uid="uid://cel0yoviy6eqi" path="res://addons/parley/models/action.gd" id="9_anq7l"]
[ext_resource type="Texture2D" uid="uid://df6gs4fjg2fbo" path="res://addons/parley/assets/TestDialogueFromSelected.svg" id="9_dmt7g"]
[ext_resource type="Texture2D" uid="uid://b4rpwa05rh13m" path="res://addons/parley/assets/End.svg" id="9_lpmhi"]
[ext_resource type="Texture2D" uid="uid://vbriasvmuex2" path="res://addons/parley/assets/Group.svg" id="10_h0et1"]
[ext_resource type="Script" uid="uid://cr1va2oab5tn5" path="res://addons/parley/models/character.gd" id="11_7jaih"]
[ext_resource type="Texture2D" uid="uid://opepismu63ox" path="res://addons/parley/assets/Export.svg" id="12_242yd"]
[ext_resource type="PackedScene" uid="uid://1alef4tqlskn" path="res://addons/parley/modals/new_dialogue_modal.tscn" id="12_v8y8i"]
[ext_resource type="Texture2D" uid="uid://dngyydvxiwyvs" path="res://addons/parley/assets/Reload.svg" id="13_oy825"]
[ext_resource type="PackedScene" uid="uid://bl5g47dhb7hmk" path="res://addons/parley/components/sidebar.tscn" id="18_re0cy"]
[ext_resource type="PackedScene" uid="uid://dcdua1f2ah8xa" path="res://addons/parley/views/parley_graph_view.tscn" id="20_8yxrj"]
[ext_resource type="Script" uid="uid://b3tj6amhgmct6" path="res://addons/parley/stores/action/action_store.gd" id="26_anq7l"]
[ext_resource type="Script" uid="uid://cbi8x2vk7bku1" path="res://addons/parley/stores/character/character_store.gd" id="28_anq7l"]
[ext_resource type="PackedScene" uid="uid://c6cagjh7y5wn4" path="res://addons/parley/modals/export_to_csv_modal.tscn" id="29_wngpy"]
[ext_resource type="PackedScene" uid="uid://cjgxxvotxhj1g" path="res://addons/parley/components/bottom_panel.tscn" id="29_xxhvx"]
[ext_resource type="Script" uid="uid://ob0am6au6mmt" path="res://addons/parley/stores/fact/fact_store.gd" id="30_7jaih"]
[ext_resource type="Script" uid="uid://cjo7uxv32sr14" path="res://addons/parley/models/edge_ast.gd" id="30_rspbv"]
[ext_resource type="Script" uid="uid://3nqtsewsmim0" path="res://addons/parley/models/node_ast.gd" id="31_tp54n"]
[ext_resource type="Script" uid="uid://btn7s5anok7p4" path="res://addons/parley/models/dialogue_ast.gd" id="32_pogw7"]

[sub_resource type="Resource" id="Resource_s5oy3"]
script = ExtResource("26_anq7l")
actions = Array[ExtResource("9_anq7l")]([])
id = ""

[sub_resource type="Resource" id="Resource_kaj3b"]
script = ExtResource("30_7jaih")
facts = Array[ExtResource("4_xjep8")]([])
id = ""

[sub_resource type="Resource" id="Resource_h2jtb"]
script = ExtResource("28_anq7l")
characters = Array[ExtResource("11_7jaih")]([])
id = ""

[sub_resource type="Resource" id="Resource_7hjis"]
script = ExtResource("32_pogw7")
title = ""
edges = Array[ExtResource("30_rspbv")]([])
nodes = Array[ExtResource("31_tp54n")]([])

[node name="MainPanel" type="VBoxContainer" node_paths=PackedStringArray("save_button", "arrange_nodes_button", "refresh_button", "open_file_dialogue")]
auto_translate_mode = 1
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_06n3w")
action_store = SubResource("Resource_s5oy3")
fact_store = SubResource("Resource_kaj3b")
character_store = SubResource("Resource_h2jtb")
save_button = NodePath("MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/SaveButton")
arrange_nodes_button = NodePath("MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/ArrangeNodesButton")
refresh_button = NodePath("MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/RefreshButton")
open_file_dialogue = NodePath("OpenFileDialog")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 0

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 400

[node name="MainViewPanel" type="PanelContainer" parent="MarginContainer/MainContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainViewContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer"]
layout_mode = 2

[node name="MenuBar" type="HBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/MenuBar"]
unique_name_in_owner = true
layout_mode = 2
text = "File"
item_count = 4
popup/item_0/text = "New Dialogue Sequence..."
popup/item_0/icon = ExtResource("3_4ui00")
popup/item_0/id = 0
popup/item_1/text = "Open Dialogue Sequence..."
popup/item_1/icon = ExtResource("4_rvlcv")
popup/item_1/id = 1
popup/item_2/text = "Export"
popup/item_2/id = -1
popup/item_2/separator = true
popup/item_3/text = "Export to CSV..."
popup/item_3/icon = ExtResource("12_242yd")
popup/item_3/id = 2

[node name="InsertMenu" type="MenuButton" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/MenuBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Insert"
item_count = 12
popup/item_0/text = "Dialogue"
popup/item_0/id = -1
popup/item_0/separator = true
popup/item_1/text = "Dialogue"
popup/item_1/icon = ExtResource("4_f842u")
popup/item_1/id = 0
popup/item_2/text = "Dialogue Option"
popup/item_2/icon = ExtResource("5_8bgxb")
popup/item_2/id = 1
popup/item_3/text = "Conditions"
popup/item_3/id = -1
popup/item_3/separator = true
popup/item_4/text = "Condition"
popup/item_4/icon = ExtResource("6_pb8ro")
popup/item_4/id = 2
popup/item_5/text = "Match"
popup/item_5/icon = ExtResource("6_pb8ro")
popup/item_5/id = 7
popup/item_6/text = "Actions"
popup/item_6/id = -1
popup/item_6/separator = true
popup/item_7/text = "Action"
popup/item_7/icon = ExtResource("7_lxbr4")
popup/item_7/id = 3
popup/item_8/text = "Misc"
popup/item_8/id = -1
popup/item_8/separator = true
popup/item_9/text = "Start"
popup/item_9/icon = ExtResource("8_2fjw0")
popup/item_9/id = 4
popup/item_10/text = "End"
popup/item_10/icon = ExtResource("9_lpmhi")
popup/item_10/id = 5
popup/item_11/text = "Group"
popup/item_11/icon = ExtResource("10_h0et1")
popup/item_11/id = 6

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="EditorActions" type="HBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions"]
z_index = 4096
layout_mode = 2
tooltip_text = "Save the current Dialogue Sequence."
theme_type_variation = &"FlatButton"
icon = ExtResource("3_qx68p")
icon_alignment = 1

[node name="ArrangeNodesButton" type="Button" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions"]
z_index = 4096
layout_mode = 2
tooltip_text = "Arrange the current Dialogue Sequence nodes."
theme_type_variation = &"FlatButton"
icon = ExtResource("4_idh4w")
flat = true

[node name="RefreshButton" type="Button" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions"]
z_index = 4096
layout_mode = 2
tooltip_text = "Refresh the current Dialogue Sequence."
theme_type_variation = &"FlatButton"
icon = ExtResource("13_oy825")
flat = true

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="Testing" type="HBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="TestDialogueFromStartButton" type="Button" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/Testing"]
z_index = 4096
layout_mode = 2
tooltip_text = "Test Dialogue Sequence from the start."
theme_type_variation = &"FlatButton"
icon = ExtResource("5_u6vvd")
flat = true

[node name="TestDialogueFromSelectedButton" type="Button" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/Testing"]
z_index = 4096
layout_mode = 2
tooltip_text = "Test Dialogue Sequence from the currently selected passage.
If no passage is selected, then it will run from the start of the sequence."
theme_type_variation = &"FlatButton"
icon = ExtResource("9_dmt7g")
flat = true

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar"]
layout_mode = 2

[node name="EditorView" type="HSplitContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 400

[node name="Sidebar" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView" instance=ExtResource("18_re0cy")]
unique_name_in_owner = true
layout_mode = 2

[node name="GraphContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GraphView" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer" instance=ExtResource("20_8yxrj")]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomPanel" parent="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer" instance=ExtResource("29_xxhvx")]
unique_name_in_owner = true
layout_mode = 2

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(1000, 750)
min_size = Vector2i(1000, 750)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.ds")

[node name="NewDialogueModal" parent="." instance=ExtResource("12_v8y8i")]
unique_name_in_owner = true
visible = false

[node name="ExportToCsvModal" parent="." instance=ExtResource("29_wngpy")]
unique_name_in_owner = true
visible = false
dialogue_ast = SubResource("Resource_7hjis")

[connection signal="pressed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/ArrangeNodesButton" to="." method="_on_arrange_nodes_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/EditorActions/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/Testing/TestDialogueFromStartButton" to="." method="_on_test_dialogue_from_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/Toolbar/Testing/TestDialogueFromSelectedButton" to="." method="_on_test_dialogue_from_selected_button_pressed"]
[connection signal="dialogue_ast_selected" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/Sidebar" to="." method="_on_sidebar_dialogue_ast_selected"]
[connection signal="node_selected" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/Sidebar" to="." method="_on_sidebar_node_selected"]
[connection signal="connection_request" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_connection_request"]
[connection signal="connection_to_empty" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_connection_to_empty"]
[connection signal="disconnection_request" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_disconnection_request"]
[connection signal="node_deselected" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_node_deselected"]
[connection signal="node_selected" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_node_selected"]
[connection signal="scroll_offset_changed" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/GraphView" to="." method="_on_graph_view_scroll_offset_changed"]
[connection signal="sidebar_toggled" from="MarginContainer/MainContainer/HSplitContainer/MainViewPanel/MainViewContainer/EditorView/GraphContainer/BottomPanel" to="." method="_on_bottom_panel_sidebar_toggled"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_dialog_file_selected"]
[connection signal="dialogue_ast_created" from="NewDialogueModal" to="." method="_on_new_dialogue_modal_dialogue_ast_created"]
